--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
-    <title>hey, hanyaaikooo! <3</title>
+    <title>hey, pokieeeebearrr! <3</title>
 </head>
 <body>
     <div class="greetings">
@@ -32,7 +32,7 @@
         <span>?</span>
     </div>
     <div class="description">
-        <span>@aiko!! <3</span>
+        <span>@vidznfy!! <3</span>
     </div>
     <div class="button">
         <button>
