--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <span>?</span>
     </div>
     <div class="description">
-        <span>@vidznfy!! <3</span>
+        <span>heyyyyy rizkaaaaa!! <3</span>
     </div>
     <div class="button">
         <button>
